# EmeraldScavenger

project/: CMakeLists.txt
project/EmeraldScavenger/: AssetManager.cpp  AssetManager.hpp  AudioManager.cpp  AudioManager.hpp  Background.cpp  Background.hpp  BirdMovementComponent.cpp  BirdMovementComponent.hpp  Box2DDebugDraw.cpp  Box2DDebugDraw.hpp  CMakeLists.txt  CollectibleItem.cpp  CollectibleItem.hpp  Component.cpp  Component.hpp  Door.cpp  Door.hpp  EmeraldGame.cpp  EmeraldGame.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  GameObject.cpp  GameObject.hpp  Level.cpp  Level.hpp  MovingPlatformComponent.cpp  MovingPlatformComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PlatformComponent.cpp  PlatformComponent.hpp  Player.cpp  Player.hpp  Rock.cpp  Rock.hpp  SideScrollingCamera.cpp  SideScrollingCamera.hpp  SpriteAnimationComponent.cpp  (+4 more)
project/EmeraldScavenger/assets/: enemiesSprites.json  fireSprites.json  gameSprites.json  lives_n_gems.json  lives_n_gems.tps  obstacles.json  platformer-art-deluxe.json  scavengerStages.json  ui.json
project/EmeraldScavenger/resources_to_use/: start.xcf
project/EmeraldScavenger/resources_to_use/Assets/: Thumbs.db  levelOriginal47x30.txt  pixel.spritefont
project/EmeraldScavenger/resources_to_use/Assets/LightAssets/: Thumbs.db
project/EmeraldScavenger/resources_to_use/Assets/levels/: level1-1.txt  level1-2.txt  level1-3.txt
